Можно взвешивать товар

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GrehOreh"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Add the AddActivity here -->
+        <activity android:name=".AddActivity" />
+
     </application>
 
 </manifest>
