Изменять товар в корзине

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,8 @@
             </intent-filter>
         </activity>
 
-        <!-- Add the AddActivity here -->
         <activity android:name=".AddActivity" />
-
+        <activity android:name=".EditActivity" />
     </application>
 
 </manifest>
